# clhero_common

./: README.md
clegs_description/: CMakeLists.txt  package.xml
clegs_description/launch/: clegs_rviz.launch  clegs_state_robot.launch
clegs_description/meshes/: clegs_100.stl  clegs_80.stl
clegs_description/robots/: clegs_template.xacro  clhero_v2.xacro  clhero_v2_hw.xacro  clhero_v2_pedestal.xacro  octo.xacro  quad.xacro
clegs_description/urdf/: base_template.xacro  clegs_leg_100.xacro  clegs_leg_80.xacro  clhero_v2_base.xacro  clhero_v2_base_hw.xacro  clhero_v2_base_pedestal.xacro  octo_base.xacro  quad_base.xacro
clhero_description/: CMakeLists.txt  package.xml
clhero_description/launch/: clhero_cinta_state_robot.launch  clhero_description.launch  clhero_rviz.launch  clhero_rviz_config.rviz  clhero_state_robot.launch
clhero_description/robots/: clhero.robot.xacro  clhero.urdf.xacro
clhero_description/urdf/: base.robot.xacro  base.xacro  base_cinta.xacro  pata_c.robot.xacro  pata_c.xacro  pata_c_cinta.xacro
clhero_gait_controller/: CMakeLists.txt  package.xml
clhero_gait_controller/launch/: gait_controller.launch
clhero_gait_controller/msg/: LegCommand.msg  LegState.msg  OffsetSetting.msg  PatternCommand.msg
clhero_gait_controller/srv/: ChangeGaitPattern.srv  GaitPatternControl.srv  LegCommandRequest.srv  RegisterGaitPattern.srv
clhero_gait_patterns_definition/: CMakeLists.txt  package.xml
clhero_hw_control/: CMakeLists.txt  package.xml
clhero_sim_control/: CMakeLists.txt  package.xml
clhero_teleop/: CMakeLists.txt  package.xml
(+32 files in other folders)
